--- a/YtPlaylist/app/src/main/res/layout/item_youtube_playlist.xml
+++ b/YtPlaylist/app/src/main/res/layout/item_youtube_playlist.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
@@ -19,7 +20,7 @@
 			android:layout_alignParentRight="true"
 			android:scaleType="centerCrop"
 			android:src="@drawable/video_placeholder"/>
-
+			
 		<LinearLayout
 			android:id="@+id/layoutFileDetails"
 			android:layout_width="wrap_content"
@@ -50,7 +51,7 @@
 
 		</LinearLayout>
 
-		<ImageView
+		<com.androweb.engine.widget.CircleImageView
 			android:id="@+id/imgFileIcon"
 			android:layout_width="@dimen/list_icon_size"
 			android:layout_height="@dimen/list_icon_size"
@@ -59,8 +60,9 @@
 			android:padding="10dp"
 			android:scaleType="centerCrop"
 			android:layout_alignParentStart="true"
-			android:background="#000000"
-			android:src="@drawable/video_placeholder"/>
+			android:src="@drawable/video_placeholder"
+			app:civ_border_width="2dp"
+            app:civ_border_color="@color/grey_800"/>
 
 	</RelativeLayout>
 
