--- a/YtPlaylist/app/src/main/res/menu/menu_youtube_playlist.xml
+++ b/YtPlaylist/app/src/main/res/menu/menu_youtube_playlist.xml
@@ -25,7 +25,7 @@
 		android:id="@+id/action_menu"
 		android:title="Playlist"
 		android:orderInCategory="104"
-		app:showAsAction="ifRoom">
+		app:showAsAction="never">
 		<menu>
 			<item 
 				android:id="@+id/action_beranda"
