--- a/YtPlaylist/app/src/main/res/values/attrs.xml
+++ b/YtPlaylist/app/src/main/res/values/attrs.xml
@@ -1,7 +1,15 @@
 <resources>
     <attr name="fontPath" format="string"/>
     <attr name="textFieldStyle" format="reference"/>
-    <declare-styleable name="statusview">
+	<declare-styleable name="CircleImageView">
+        <attr name="civ_border_width" format="dimension" />
+        <attr name="civ_border_color" format="color" />
+        <attr name="civ_border_overlay" format="boolean" />
+        <!-- {@deprecated Use civ_circlebackground_color instead.} -->
+        <attr name="civ_fill_color" format="color" />
+        <attr name="civ_circle_background_color" format="color" />
+    </declare-styleable>
+	<declare-styleable name="statusview">
         <attr name="complete" format="reference" />
         <attr name="error" format="reference" />
         <attr name="loading" format="reference" />
